fix(admin): remove role from localstorage, overflow class, cart bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,11 @@ body {
   background-color: $background;
   font-family: "OpenSans-Regular", sans-serif;
   color: #fff;
+  overflow-y: auto;
+}
+
+.no-scroll {
+  overflow-y: hidden;
 }
 
 #app {
